--- a/iOSCommonUI/LoginView/LoginViewGoogle.xib
+++ b/iOSCommonUI/LoginView/LoginViewGoogle.xib
@@ -23,6 +23,7 @@
                 <outlet property="btnLogin" destination="H9P-yl-D5O" id="zcV-B2-HG4"/>
                 <outlet property="btnSignUp" destination="2pP-dT-sRA" id="ZZE-Lr-m2k"/>
                 <outlet property="ivLogo" destination="Uvh-uB-OFr" id="cZC-Jl-PRL"/>
+                <outlet property="lblVersion" destination="cy9-0s-24E" id="0rW-0l-QTG"/>
                 <outlet property="tfPassword" destination="lpw-Eh-VhQ" id="TCt-BH-Lfz"/>
                 <outlet property="tfUserName" destination="1Dx-Y3-UgZ" id="t9b-UN-AEN"/>
                 <outlet property="view" destination="6YF-xQ-3EW" id="n0V-aR-bbj"/>
@@ -34,14 +35,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Uvh-uB-OFr">
-                    <rect key="frame" x="123" y="60" width="128" height="128"/>
+                    <rect key="frame" x="123" y="40" width="128" height="128"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="128" id="Kad-kf-qFf"/>
                         <constraint firstAttribute="width" constant="128" id="xxL-qP-PZR"/>
                     </constraints>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jwB-gw-7M0" userLabel="LoginViewHolder">
-                    <rect key="frame" x="49" y="228" width="277" height="30"/>
+                    <rect key="frame" x="49" y="208" width="277" height="44"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mail_Icon" translatesAutoresizingMaskIntoConstraints="NO" id="o0E-iG-nPQ">
                             <rect key="frame" x="0.0" y="2.5" width="40" height="40"/>
@@ -50,8 +51,12 @@
                                 <constraint firstAttribute="width" constant="40" id="iQp-3M-HTk"/>
                             </constraints>
                         </imageView>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Dx-Y3-UgZ">
-                            <rect key="frame" x="0.0" y="0.0" width="277" height="30"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Dx-Y3-UgZ">
+                            <rect key="frame" x="0.0" y="0.0" width="277" height="44"/>
+                            <color key="backgroundColor" red="0.96470588235294119" green="0.96078431372549022" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="44" id="4kJ-ky-u5J"/>
+                            </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocorrectionType="no"/>
@@ -63,7 +68,7 @@
                         <constraint firstItem="1Dx-Y3-UgZ" firstAttribute="top" secondItem="jwB-gw-7M0" secondAttribute="top" id="JSQ-eM-BJs"/>
                         <constraint firstItem="1Dx-Y3-UgZ" firstAttribute="leading" secondItem="o0E-iG-nPQ" secondAttribute="trailing" id="N6e-YC-mfz"/>
                         <constraint firstItem="o0E-iG-nPQ" firstAttribute="leading" secondItem="jwB-gw-7M0" secondAttribute="leading" id="WRW-A9-4mL"/>
-                        <constraint firstAttribute="height" constant="30" id="ZKG-8r-5O5"/>
+                        <constraint firstAttribute="height" constant="44" id="ZKG-8r-5O5"/>
                         <constraint firstAttribute="trailing" secondItem="1Dx-Y3-UgZ" secondAttribute="trailing" id="aOJ-at-de1"/>
                         <constraint firstAttribute="trailing" secondItem="1Dx-Y3-UgZ" secondAttribute="trailing" id="aTD-Hj-m0o"/>
                         <constraint firstAttribute="bottom" secondItem="1Dx-Y3-UgZ" secondAttribute="bottom" id="q02-d1-nEN"/>
@@ -76,7 +81,7 @@
                     </variation>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FD9-3v-OBG" userLabel="PasswordViewHolder">
-                    <rect key="frame" x="49" y="274" width="277" height="30"/>
+                    <rect key="frame" x="49" y="272" width="277" height="44"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Password_Icon" translatesAutoresizingMaskIntoConstraints="NO" id="kie-D0-GnZ">
                             <rect key="frame" x="0.0" y="2.5" width="40" height="40"/>
@@ -85,8 +90,12 @@
                                 <constraint firstAttribute="width" constant="40" id="RkD-HG-SJT"/>
                             </constraints>
                         </imageView>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lpw-Eh-VhQ">
-                            <rect key="frame" x="0.0" y="0.0" width="277" height="30"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lpw-Eh-VhQ">
+                            <rect key="frame" x="0.0" y="0.0" width="277" height="44"/>
+                            <color key="backgroundColor" red="0.96470588239999999" green="0.96078431369999995" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="44" id="98i-Ct-F9c"/>
+                            </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
@@ -100,7 +109,7 @@
                         <constraint firstAttribute="trailing" secondItem="lpw-Eh-VhQ" secondAttribute="trailing" id="Rm1-4l-d7N"/>
                         <constraint firstItem="kie-D0-GnZ" firstAttribute="centerY" secondItem="FD9-3v-OBG" secondAttribute="centerY" id="SgS-i1-G6u"/>
                         <constraint firstItem="lpw-Eh-VhQ" firstAttribute="leading" secondItem="kie-D0-GnZ" secondAttribute="trailing" id="VrF-BF-qr2"/>
-                        <constraint firstAttribute="height" constant="30" id="a0n-B3-nqo"/>
+                        <constraint firstAttribute="height" constant="44" id="a0n-B3-nqo"/>
                         <constraint firstItem="lpw-Eh-VhQ" firstAttribute="leading" secondItem="FD9-3v-OBG" secondAttribute="leading" id="ifv-hP-Pff"/>
                         <constraint firstAttribute="bottom" secondItem="lpw-Eh-VhQ" secondAttribute="bottom" id="mZP-kE-IaX"/>
                     </constraints>
@@ -111,10 +120,10 @@
                     </variation>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H9P-yl-D5O">
-                    <rect key="frame" x="49" y="334" width="277" height="35"/>
+                    <rect key="frame" x="49" y="346" width="277" height="44"/>
                     <color key="backgroundColor" red="0.5777859091758728" green="0.21305316686630249" blue="0.55080223083496094" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="35" id="wAz-Ui-sZp"/>
+                        <constraint firstAttribute="height" constant="44" id="wAz-Ui-sZp"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                     <state key="normal" title="LOGIN">
@@ -122,7 +131,7 @@
                     </state>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a69-NY-O7f" userLabel="Connect with">
-                    <rect key="frame" x="50" y="381" width="276" height="38"/>
+                    <rect key="frame" x="50" y="402" width="276" height="38"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qNR-uS-qvW" userLabel="line">
                             <rect key="frame" x="8" y="19" width="114" height="1"/>
@@ -161,10 +170,10 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rFh-P5-SCn" userLabel="buttonHolder">
-                    <rect key="frame" x="50" y="434" width="276" height="38"/>
+                    <rect key="frame" x="50" y="455" width="276" height="44"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Ir-CS-YT3">
-                            <rect key="frame" x="0.0" y="0.0" width="276" height="38"/>
+                            <rect key="frame" x="0.0" y="0.0" width="276" height="44"/>
                             <color key="backgroundColor" red="0.82818955183029175" green="0.2822708785533905" blue="0.20922556519508362" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                             <state key="normal" title="   GOOGLE" image="Google_Icon">
@@ -174,6 +183,7 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
+                        <constraint firstAttribute="height" constant="44" id="0lt-4h-vPG"/>
                         <constraint firstItem="4Ir-CS-YT3" firstAttribute="top" secondItem="rFh-P5-SCn" secondAttribute="top" id="10N-Mt-6zh"/>
                         <constraint firstItem="4Ir-CS-YT3" firstAttribute="width" secondItem="rFh-P5-SCn" secondAttribute="width" id="8QA-b3-9hN"/>
                         <constraint firstAttribute="trailing" secondItem="4Ir-CS-YT3" secondAttribute="trailing" id="T9I-1R-nq0"/>
@@ -181,49 +191,60 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vka-Vw-bEI">
-                    <rect key="frame" x="131" y="503" width="112" height="30"/>
+                    <rect key="frame" x="131" y="519" width="112" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="KYc-FJ-4ja"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="11"/>
                     <state key="normal" title="FORGOT PASSWORD">
                         <color key="titleColor" red="0.48229777812957764" green="0.48238468170166016" blue="0.4822922945022583" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2pP-dT-sRA">
-                    <rect key="frame" x="153" y="541" width="68" height="30"/>
+                    <rect key="frame" x="149" y="554" width="77" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="lHJ-ew-6v3"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                    <state key="normal" title="Sign Up Now">
+                    <state key="normal" title="SIGN UP HERE">
                         <color key="titleColor" red="0.48229777810000002" green="0.48238468169999998" blue="0.4822922945" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="v1.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cy9-0s-24E">
+                    <rect key="frame" x="157" y="589" width="60" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="60" id="E6P-Z0-jmH"/>
+                        <constraint firstAttribute="height" constant="21" id="Hh6-u6-v8T"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                    <color key="textColor" red="0.48229777810000002" green="0.48238468169999998" blue="0.4822922945" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="Uvh-uB-OFr" firstAttribute="top" secondItem="6YF-xQ-3EW" secondAttribute="top" constant="60" id="78a-00-Whe"/>
+                <constraint firstItem="Uvh-uB-OFr" firstAttribute="top" secondItem="6YF-xQ-3EW" secondAttribute="top" constant="40" id="78a-00-Whe"/>
                 <constraint firstItem="2pP-dT-sRA" firstAttribute="centerX" secondItem="vka-Vw-bEI" secondAttribute="centerX" id="7FE-IS-f5k"/>
                 <constraint firstItem="jwB-gw-7M0" firstAttribute="leading" secondItem="6YF-xQ-3EW" secondAttribute="leading" constant="49" id="89c-xL-d7m"/>
                 <constraint firstAttribute="trailing" secondItem="jwB-gw-7M0" secondAttribute="trailing" constant="49" id="8ET-cx-JQL"/>
-                <constraint firstItem="FD9-3v-OBG" firstAttribute="top" secondItem="jwB-gw-7M0" secondAttribute="bottom" constant="16" id="Abd-kg-MNH"/>
-                <constraint firstItem="vka-Vw-bEI" firstAttribute="top" secondItem="rFh-P5-SCn" secondAttribute="bottom" constant="31" id="CeC-hf-hug"/>
+                <constraint firstItem="FD9-3v-OBG" firstAttribute="top" secondItem="jwB-gw-7M0" secondAttribute="bottom" constant="20" id="Abd-kg-MNH"/>
+                <constraint firstItem="vka-Vw-bEI" firstAttribute="top" secondItem="rFh-P5-SCn" secondAttribute="bottom" constant="20" id="CeC-hf-hug"/>
                 <constraint firstItem="a69-NY-O7f" firstAttribute="top" secondItem="H9P-yl-D5O" secondAttribute="bottom" constant="12" id="DEE-Zs-KEx"/>
                 <constraint firstItem="jwB-gw-7M0" firstAttribute="top" secondItem="Uvh-uB-OFr" secondAttribute="bottom" constant="40" id="EOI-ej-79c"/>
                 <constraint firstItem="H9P-yl-D5O" firstAttribute="width" secondItem="FD9-3v-OBG" secondAttribute="width" id="IAq-Pn-9k0"/>
                 <constraint firstItem="rFh-P5-SCn" firstAttribute="centerX" secondItem="a69-NY-O7f" secondAttribute="centerX" id="Q93-1G-RhA"/>
                 <constraint firstAttribute="trailing" secondItem="a69-NY-O7f" secondAttribute="trailing" constant="49.5" id="R7i-vx-bm8"/>
+                <constraint firstItem="cy9-0s-24E" firstAttribute="top" secondItem="2pP-dT-sRA" secondAttribute="bottom" constant="5" id="Sad-E1-Qok"/>
                 <constraint firstItem="FD9-3v-OBG" firstAttribute="width" secondItem="jwB-gw-7M0" secondAttribute="width" id="b3w-l3-sKq"/>
                 <constraint firstItem="Uvh-uB-OFr" firstAttribute="centerX" secondItem="6YF-xQ-3EW" secondAttribute="centerX" id="bpe-yu-AaX"/>
+                <constraint firstItem="cy9-0s-24E" firstAttribute="centerX" secondItem="Wgw-cf-R0R" secondAttribute="centerX" id="mLR-K7-eNf"/>
                 <constraint firstItem="H9P-yl-D5O" firstAttribute="top" secondItem="lpw-Eh-VhQ" secondAttribute="bottom" constant="30" id="miT-VK-QUv"/>
                 <constraint firstItem="vka-Vw-bEI" firstAttribute="centerX" secondItem="6YF-xQ-3EW" secondAttribute="centerX" id="pZO-YH-1nY"/>
-                <constraint firstItem="rFh-P5-SCn" firstAttribute="height" secondItem="a69-NY-O7f" secondAttribute="height" id="qn4-2h-oHB"/>
                 <constraint firstItem="rFh-P5-SCn" firstAttribute="top" secondItem="a69-NY-O7f" secondAttribute="bottom" constant="15" id="r89-nU-wDO"/>
                 <constraint firstItem="FD9-3v-OBG" firstAttribute="centerX" secondItem="jwB-gw-7M0" secondAttribute="centerX" id="s23-Hm-gWg"/>
                 <constraint firstItem="rFh-P5-SCn" firstAttribute="width" secondItem="a69-NY-O7f" secondAttribute="width" id="vYt-uH-b1O"/>
                 <constraint firstItem="a69-NY-O7f" firstAttribute="leading" secondItem="6YF-xQ-3EW" secondAttribute="leading" constant="49.5" id="wIX-Dh-uHR"/>
-                <constraint firstItem="2pP-dT-sRA" firstAttribute="top" secondItem="vka-Vw-bEI" secondAttribute="bottom" constant="8" id="xTd-aO-wfi"/>
+                <constraint firstItem="2pP-dT-sRA" firstAttribute="top" secondItem="vka-Vw-bEI" secondAttribute="bottom" constant="5" id="xTd-aO-wfi"/>
                 <constraint firstItem="H9P-yl-D5O" firstAttribute="centerX" secondItem="lpw-Eh-VhQ" secondAttribute="centerX" id="yQR-sk-rKA"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
