--- a/iOSCommonUI/LoginView/LoginViewGoogle.xib
+++ b/iOSCommonUI/LoginView/LoginViewGoogle.xib
@@ -128,6 +128,9 @@
                     <state key="normal" title="LOGIN">
                         <color key="titleColor" red="0.96934486040000001" green="0.96934486040000001" blue="0.96934486040000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
+                    <connections>
+                        <action selector="didPressedLoginBtn:forEvent:" destination="-1" eventType="touchUpInside" id="rj6-lU-cCe"/>
+                    </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a69-NY-O7f" userLabel="Connect with">
                     <rect key="frame" x="50" y="402" width="276" height="38"/>
