--- a/iOSCommonUI/Registration/Registration.xib
+++ b/iOSCommonUI/Registration/Registration.xib
@@ -180,7 +180,7 @@
                         <constraint firstItem="4zR-0j-3xb" firstAttribute="centerY" secondItem="uw2-uQ-pJs" secondAttribute="centerY" id="yFi-cU-OUY"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eJp-Md-2xv" userLabel="RFIDViewHolder">
+                <view contentMode="scaleToFill" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="eJp-Md-2xv" userLabel="RFIDViewHolder">
                     <rect key="frame" x="49" y="512" width="277" height="45"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Password_Icon" translatesAutoresizingMaskIntoConstraints="NO" id="QE5-cL-gHE">
@@ -202,22 +202,24 @@
                         <constraint firstItem="QE5-cL-gHE" firstAttribute="centerY" secondItem="eJp-Md-2xv" secondAttribute="centerY" id="1En-KO-vkM"/>
                         <constraint firstItem="xP2-Ua-ymC" firstAttribute="leading" secondItem="QE5-cL-gHE" secondAttribute="trailing" id="4Cb-FI-5W8"/>
                         <constraint firstAttribute="trailing" secondItem="xP2-Ua-ymC" secondAttribute="trailing" id="CbT-3m-mJq"/>
+                        <constraint firstAttribute="height" priority="1" constant="45" id="OAc-LP-UVU"/>
                         <constraint firstItem="QE5-cL-gHE" firstAttribute="leading" secondItem="eJp-Md-2xv" secondAttribute="leading" id="ivN-Ek-3oV"/>
                         <constraint firstItem="xP2-Ua-ymC" firstAttribute="top" secondItem="eJp-Md-2xv" secondAttribute="top" id="rsJ-lh-SFs"/>
                         <constraint firstAttribute="bottom" secondItem="xP2-Ua-ymC" secondAttribute="bottom" id="s1R-xh-aDk"/>
                         <constraint firstAttribute="trailing" secondItem="xP2-Ua-ymC" secondAttribute="trailing" id="zEg-MU-llL"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CREATE YOUR ACCOUNT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RFq-RK-AHf">
-                    <rect key="frame" x="49" y="103" width="277" height="42"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="250" text="CREATE YOUR ACCOUNT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RFq-RK-AHf">
+                    <rect key="frame" x="49" y="88" width="277" height="76"/>
                     <constraints>
+                        <constraint firstAttribute="height" constant="76" id="Gn3-nk-2Yg"/>
                         <constraint firstAttribute="width" constant="277" id="rh6-Hu-sRZ"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="BadaBoomBB" family="BadaBoom BB" pointSize="36"/>
                     <color key="textColor" red="0.97828383279999998" green="0.97828383279999998" blue="0.97828383279999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Baw-ZE-wD2">
+                <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Baw-ZE-wD2">
                     <rect key="frame" x="15" y="597" width="345" height="50"/>
                     <color key="backgroundColor" red="0.77772027249999998" green="0.1420282722" blue="0.1623229682" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
@@ -247,11 +249,12 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="Qem-mQ-YcY" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="33" id="1wn-t8-SvR"/>
-                <constraint firstItem="eJp-Md-2xv" firstAttribute="height" secondItem="uw2-uQ-pJs" secondAttribute="height" id="6El-UB-Wpc"/>
+                <constraint firstItem="eJp-Md-2xv" firstAttribute="height" secondItem="uw2-uQ-pJs" secondAttribute="height" priority="1" id="6El-UB-Wpc"/>
                 <constraint firstItem="wFU-YW-ltn" firstAttribute="top" secondItem="ZBu-Th-p2y" secondAttribute="bottom" constant="15" id="6xe-GA-oOF"/>
                 <constraint firstItem="RFq-RK-AHf" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="713-Wi-GfT"/>
-                <constraint firstItem="RFq-RK-AHf" firstAttribute="top" secondItem="Qem-mQ-YcY" secondAttribute="bottom" constant="45" id="7eb-XA-NVO"/>
+                <constraint firstItem="RFq-RK-AHf" firstAttribute="top" secondItem="Qem-mQ-YcY" secondAttribute="bottom" constant="30" id="7eb-XA-NVO"/>
                 <constraint firstItem="uw2-uQ-pJs" firstAttribute="top" secondItem="MbY-U7-ROv" secondAttribute="bottom" constant="15" id="ASS-0p-Eh2"/>
+                <constraint firstItem="ZBu-Th-p2y" firstAttribute="top" secondItem="RFq-RK-AHf" secondAttribute="bottom" constant="50" id="BPX-l0-tQR"/>
                 <constraint firstAttribute="trailing" secondItem="Baw-ZE-wD2" secondAttribute="trailing" constant="15" id="DU4-rg-8G0"/>
                 <constraint firstAttribute="trailing" secondItem="MbY-U7-ROv" secondAttribute="trailing" constant="49" id="F7n-i3-Jyr"/>
                 <constraint firstItem="MbY-U7-ROv" firstAttribute="centerX" secondItem="az6-hQ-lvh" secondAttribute="centerX" id="HiD-Gd-Ziw"/>
